Feat: demo finished

--- a/components/Style/header.module.scss
+++ b/components/Style/header.module.scss
@@ -4,12 +4,30 @@
     
     box-shadow: 0 0 10px #0004;
     display: flex;
-    width: 100vw;
+    width: 100%;
+    padding: $mn/4 0px;
+    height: $mn*1.2;
+    align-items: center;
   .LogInButton {
       margin-left: auto;
   }
   h1, button {
     @include FontLarge;
-    padding: 0 $mn/2;
+    margin: 0px $mn/3;
+
   }
+  button {
+    padding: $mn/10 $mn/3;
+    border: 0;
+    border-radius: 5px;
+    background-color: #eaf5fb;
+    color: #009ede;
+    @include FontNormal;
+  }
+
+  img {
+    height: 100%;
+    margin-left: $mn/3;
+  }
+
 }
