feat: added categoryColors, text overflow:scroll

--- a/base/_color.scss
+++ b/base/_color.scss
@@ -1,4 +1,10 @@
-$ColorGreen: #49853e;
 $ColorWhite: #fff;
 $ColorAsh: #fcfcfc;
 $ColorRock: #58595b;
+
+$ColorOrange: rgb(229, 110, 8);
+$ColorTeal: rgb(39, 201, 168);
+$ColorYellow: rgb(235, 191, 6);
+$ColorPurple: rgb(168, 77, 150);
+$ColorRed: rgb(224, 79, 77);
+$ColorGreen: rgb(73, 133, 62);
