--- a/components/Style/initiativeCard.module.scss
+++ b/components/Style/initiativeCard.module.scss
@@ -1,39 +1,93 @@
-@import "../../base/index.scss";
+@import '../../base/index.scss';
 
 .initiativeCard {
-  flex-grow: 1;
-  width: 22%;
-  min-width: 400px;
-  background-color: $ColorAsh;
-  margin: $mn/4;
-  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
-  padding: $mn/3;
-  min-height: 350px;
-  position: relative;
-  p {
-    color: $ColorRock;
-    @include FontNormal;
-  }
+     flex-grow: 1;
+     width: 22%;
+     min-width: 400px;
+     background-color: $ColorAsh;
+     margin: $mn/4;
+     box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
+     padding: $mn/3;
+     min-height: 350px;
+     position: relative;
+     border-bottom-right-radius: 10px;
+     border-bottom-left-radius: 10px;
+     .gradient {
+          width: 100%;
+          height: 10%;
+          left: 0;
+          bottom: 20%;
+          position: absolute;
+          display: block;
+          background-image: linear-gradient(
+               transparent,
+               $ColorAsh,
+               $ColorAsh,
+               $ColorAsh
+          );
+     }
+     p {
+          color: $ColorRock;
+          @include FontNormal;
+          height: 40%;
+          max-height: $mn * 1.5;
+          overflow-y: scroll;
+     }
 
-  .title {
-    @include FontExtraLarge;
-  }
-  a {
-    display: block;
-    text-decoration: none;
-    padding: $mn/6 0px;
-    @include FontNormal;
-  }
-  .icons {
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly;
-    padding: $mn/3 0px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    img {
-      width: 9.5%;
-    }
-  }
+     .title {
+          @include FontExtraLarge;
+          height: 25%;
+          overflow-y: scroll;
+     }
+     a {
+          display: block;
+          text-decoration: none;
+          padding: $mn/6 0px;
+          @include FontNormal;
+     }
+     .bottomCard {
+          .colorGreen {
+               background: $ColorGreen;
+          }
+          .colorTeal {
+               background: $ColorTeal;
+          }
+          .colorPurple {
+               background: $ColorPurple;
+          }
+          .colorRed {
+               background: $ColorRed;
+          }
+          .colorYellow {
+               background: $ColorYellow;
+          }
+          .colorOrange {
+               background: $ColorOrange;
+          }
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          .icons {
+               display: flex;
+               width: 100%;
+               justify-content: space-evenly;
+               padding: $mn/3 0px;
+               img {
+                    width: 9.5%;
+               }
+          }
+          .categoryColor {
+               position: relative;
+               height: $mn/4;
+               width: 100%;
+               border-bottom-right-radius: 10px;
+               border-bottom-left-radius: 10px;
+               div {
+                    height: 100%;
+                    width: 100%;
+                    border-bottom-right-radius: 10px;
+                    border-bottom-left-radius: 10px;
+               }
+          }
+     }
 }
