fix: intro, mainArea filter

--- a/components/Style/filter.module.scss
+++ b/components/Style/filter.module.scss
@@ -1,21 +1,16 @@
-@import "../../base/index.scss";
-
-
+@import '../../base/index.scss';
 
 .filter {
-    display: flex;
-    justify-content: space-between;
-    padding: $mn/4;
+     display: flex;
+     justify-content: space-between;
+     padding: $mn $mn/4;
 
-    select {
-        display: block;
-        height: $mn/2;
-        @include FontNormal;
-        width: 24%;
-        border-radius: 5px;
-        color: $ColorRock;
-    }
-
-
+     select {
+          display: block;
+          height: $mn/2;
+          @include FontNormal;
+          width: 24%;
+          border-radius: 5px;
+          color: $ColorRock;
+     }
 }
-
