--- a/components/Style/initiativeCard.module.scss
+++ b/components/Style/initiativeCard.module.scss
@@ -4,6 +4,7 @@
      flex-grow: 1;
      width: 22%;
      min-width: 400px;
+     // max-width: 400px;
      background-color: $ColorAsh;
      margin: $mn/4;
      box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
