--- a/components/Style/intro.module.scss
+++ b/components/Style/intro.module.scss
@@ -8,37 +8,54 @@
      flex-direction: column;
      height: min-content;
      margin: $mn/4 $mn/4;
-     padding: $mn/2 $mn/3;
-     border-radius: 5px;
-     border: 2px inset green;
+     padding: $mn/4 $mn/3;
+     // border-radius: 5px;
+     // border: 2px inset green;
      background-color: $ColorAsh;
      box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
      transition: 0.5s all ease;
      @media only screen and (min-width: 1200px) {
-          padding: $mn/2 $mn/3;
+          // padding: $mn/2 $mn/3;
+     }
+     h1,
+     p {
      }
 
      h1 {
-          @include FontExtraLarge;
+          // @include FontExtraLarge;
           margin-bottom: 1rem;
+          font-family: 'helvetica neue';
+          font-weight: normal;
+          font-style: normal;
+          color: #58595b;
+          line-height: 1.4;
+          font-size: 36px;
+          max-width: 90%;
      }
      p {
           @include FontNormal;
           width: 90%;
-          text-align: justify;
+          text-align: left;
           color: $ColorRock;
+          line-height: 1.3;
+          color: #58595b;
           @media only screen and (min-width: 1200px) {
                width: 70%;
           }
+          a {
+               text-decoration: none;
+               color: #009ede;
+          }
      }
-     .button {
-          margin: $mn/3;
-          background: none;
-          color: grey;
-          font-size: 1rem;
-          position: absolute;
-          right: 0;
-          top: 0;
-          border: 1px solid grey;
-     }
+}
+.button {
+     margin: $mn/3;
+     background: none;
+     color: grey;
+     font-size: 1rem;
+     position: absolute;
+     right: 1.5rem;
+     top: 5rem;
+     z-index: 100;
+     border: 1px solid grey;
 }
