--- a/components/Style/header.module.scss
+++ b/components/Style/header.module.scss
@@ -4,7 +4,7 @@
      box-shadow: 0 0 10px #0004;
      display: flex;
      width: 100%;
-     padding: $mn/4;
+     padding: $mn/4 $mn/6;
      height: $mn * 1.2;
      align-items: center;
      .LogInButton {
