--- a/components/Style/initiatives.module.scss
+++ b/components/Style/initiatives.module.scss
@@ -1,6 +1,8 @@
-@import "../../base/index.scss";
+@import '../../base/index.scss';
 
 .initiatives {
-  display: flex;
-  flex-wrap: wrap;
+     display: flex;
+     flex-wrap: wrap;
+     margin: $mn/4 $mn/-4;
+     //  justify-content: space-around;
 }
