--- a/components/Style/intro.module.scss
+++ b/components/Style/intro.module.scss
@@ -7,7 +7,7 @@
      flex-wrap: wrap;
      flex-direction: column;
      height: min-content;
-     margin: $mn/4 $mn/4;
+     margin: $mn/4 0;
      padding: $mn/4 $mn/3;
      // border-radius: 5px;
      // border: 2px inset green;
@@ -46,6 +46,14 @@
                text-decoration: none;
                color: #009ede;
           }
+     }
+     ul {
+          @include FontNormal;
+          width: 90%;
+          text-align: left;
+          color: $ColorRock;
+          line-height: 1.3;
+          color: #58595b;
      }
 }
 .button {
