--- a/components/Style/intro.module.scss
+++ b/components/Style/intro.module.scss
@@ -7,7 +7,7 @@
      flex-wrap: wrap;
      flex-direction: column;
      height: min-content;
-     margin: $mn/4 0;
+     margin: $mn/4 0 0 0;
      padding: $mn/4 $mn/3;
      // border-radius: 5px;
      // border: 2px inset green;
