fix: paddings on sides of main content

--- a/components/Style/initiativeCard.module.scss
+++ b/components/Style/initiativeCard.module.scss
@@ -7,6 +7,7 @@
      flex-grow: 1;
      height: $mn * 5.5;
      margin: $mn/4;
+     cursor: pointer;
      .front,
      .back {
           background-color: $ColorAsh;
