--- a/components/Style/initiatives.module.scss
+++ b/components/Style/initiatives.module.scss
@@ -4,5 +4,6 @@
      display: flex;
      flex-wrap: wrap;
      margin: $mn/8 $mn/-4;
+     width: auto;
      //  justify-content: space-around;
 }
