--- a/base/normalize.scss
+++ b/base/normalize.scss
@@ -1,10 +1,11 @@
 body {
-  margin: 0;
-  padding: 0;
+     margin: 0;
+     padding: 0;
+     width: 100vw;
 }
 
 * {
-  box-sizing: border-box;
+     box-sizing: border-box;
 }
 
 h1,
@@ -15,5 +16,5 @@ h5,
 h6,
 p,
 a {
-  margin: 0;
+     margin: 0;
 }
