--- a/components/Style/filter.module.scss
+++ b/components/Style/filter.module.scss
@@ -16,7 +16,10 @@
 }
 .blobs {
      display: flex;
+
      .blobButton {
+          display: flex;
+          flex-direction: row;
           border: none;
           border-radius: 50px;
           background: lightcoral;
