--- a/components/Style/initiativeCard.module.scss
+++ b/components/Style/initiativeCard.module.scss
@@ -1,131 +1,145 @@
-@import '../../base/index.scss';
+@import "../../base/index.scss";
 
 .initiativeCard {
-     position: relative;
-     width: 22%;
-     min-width: 400px;
-     flex-grow: 1;
-     height: $mn * 5.5;
-     margin: $mn/4;
-     cursor: pointer;
-     .front,
-     .back {
-          background-color: $ColorAsh;
+  position: relative;
+  width: 22%;
+  min-width: 400px;
+  flex-grow: 1;
+  height: $mn * 5.5;
+  margin: $mn/4;
+  cursor: pointer;
+  .front,
+  .back {
+    background-color: $ColorAsh;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    position: absolute;
+    will-change: transform, opacity;
+    width: 100%;
+    height: 100%;
+    padding: $mn/3;
+    box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
+  }
+  .back {
+    // background-color: #fff;
+
+    .title {
+      @include FontNormal;
+      font-weight: 400;
+    }
+    p {
+      padding: $mn/4 0;
+      color: $ColorRock;
+      @include FontNormal;
+      height: 40%;
+      max-height: $mn * 1.5;
+    }
+    a {
+      display: block;
+      text-decoration: none;
+      padding: $mn/6 0px;
+      @include FontNormal;
+    }
+  }
+  .front {
+    .gradient {
+      width: 100%;
+      height: 10%;
+      left: 0;
+      bottom: 20%;
+      position: absolute;
+      display: block;
+    }
+
+    p {
+      //  border: 1px solid black;
+
+      color: $ColorRock;
+      @include FontNormal;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      max-height: $mn * 1.5;
+    }
+
+    .readMore {
+      padding-top: $mn/2;
+
+      //  font-weight: 600;
+      //  opacity: 0.75;
+    }
+
+    .title {
+      @include FontExtraLarge;
+      height: auto;
+      min-height: 15%;
+    }
+
+    .host {
+      font-size: $mn/4;
+    }
+    .mainSponsor {
+      font-size: $mn/4;
+    }
+
+    .description {
+      color: $ColorRock;
+      font-size: $mn/5;
+      opacity: 0.6;
+    }
+
+    a {
+      width: min-content;
+      display: block;
+      text-decoration: none;
+      padding: $mn/6 0px;
+      @include FontNormal;
+    }
+    .bottomCard {
+      .colorGreen {
+        background: $ColorGreen;
+      }
+      .colorTeal {
+        background: $ColorTeal;
+      }
+      .colorPurple {
+        background: $ColorPurple;
+      }
+      .colorRed {
+        background: $ColorRed;
+      }
+      .colorYellow {
+        background: $ColorYellow;
+      }
+      .colorOrange {
+        background: $ColorOrange;
+      }
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      .icons {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+        padding: $mn/3 0px;
+        img {
+          width: 9.5%;
+        }
+      }
+      .categoryColor {
+        position: relative;
+        height: $mn/4;
+        width: 100%;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        div {
+          height: 100%;
+          width: 100%;
           border-bottom-right-radius: 10px;
           border-bottom-left-radius: 10px;
-          position: absolute;
-          will-change: transform, opacity;
-          width: 100%;
-          height: 100%;
-          padding: $mn/3;
-          box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
-     }
-     .back {
-          // background-color: #fff;
-
-          .title {
-               @include FontNormal;
-               font-weight: 400;
-          }
-          p {
-               padding: $mn/4 0;
-               color: $ColorRock;
-               @include FontNormal;
-               height: 40%;
-               max-height: $mn * 1.5;
-          }
-          a {
-               display: block;
-               text-decoration: none;
-               padding: $mn/6 0px;
-               @include FontNormal;
-          }
-     }
-     .front {
-          .gradient {
-               width: 100%;
-               height: 10%;
-               left: 0;
-               bottom: 20%;
-               position: absolute;
-               display: block;
-          }
-
-          p {
-               //  border: 1px solid black;
-
-               color: $ColorRock;
-               @include FontNormal;
-               display: -webkit-box;
-               -webkit-line-clamp: 3;
-               -webkit-box-orient: vertical;
-               overflow: hidden;
-               max-height: $mn * 1.5;
-          }
-
-          .readMore {
-               padding-top: $mn/2;
-
-               //  font-weight: 600;
-               //  opacity: 0.75;
-          }
-
-          .title {
-               @include FontExtraLarge;
-               height: auto;
-               min-height: 15%;
-          }
-          a {
-               width: min-content;
-               display: block;
-               text-decoration: none;
-               padding: $mn/6 0px;
-               @include FontNormal;
-          }
-          .bottomCard {
-               .colorGreen {
-                    background: $ColorGreen;
-               }
-               .colorTeal {
-                    background: $ColorTeal;
-               }
-               .colorPurple {
-                    background: $ColorPurple;
-               }
-               .colorRed {
-                    background: $ColorRed;
-               }
-               .colorYellow {
-                    background: $ColorYellow;
-               }
-               .colorOrange {
-                    background: $ColorOrange;
-               }
-               position: absolute;
-               left: 0;
-               bottom: 0;
-               .icons {
-                    display: flex;
-                    width: 100%;
-                    justify-content: space-evenly;
-                    padding: $mn/3 0px;
-                    img {
-                         width: 9.5%;
-                    }
-               }
-               .categoryColor {
-                    position: relative;
-                    height: $mn/4;
-                    width: 100%;
-                    border-bottom-right-radius: 10px;
-                    border-bottom-left-radius: 10px;
-                    div {
-                         height: 100%;
-                         width: 100%;
-                         border-bottom-right-radius: 10px;
-                         border-bottom-left-radius: 10px;
-                    }
-               }
-          }
-     }
+        }
+      }
+    }
+  }
 }
