--- a/components/Style/intro.module.scss
+++ b/components/Style/intro.module.scss
@@ -1,80 +1,80 @@
-@import '../../base/index.scss';
+@import "../../base/index.scss";
 
 .intro {
-     display: flex;
-     position: relative;
-     width: auto;
-     flex-wrap: wrap;
-     flex-direction: column;
+  display: flex;
+  position: relative;
+  width: auto;
+  flex-wrap: wrap;
+  flex-direction: column;
 
-     margin: $mn/4 0 0 0;
-     padding: $mn/4 $mn/3;
-     // border-radius: 5px;
-     // border: 2px inset green;
-     background-color: $ColorAsh;
-     box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
-     transition: 0.5s all ease;
-     @media only screen and (min-width: 1200px) {
-          // padding: $mn/2 $mn/3;
-     }
-     .button {
-          margin-left: auto;
-          background: none;
-          color: grey;
-          font-size: 1rem;
-          position: relative;
-          z-index: 100;
-          border: 1px solid grey;
-     }
-     h1,
-     p {
-     }
+  margin: $mn/4 0 0 0;
+  padding: $mn/4 $mn/3;
+  // border-radius: 5px;
+  // border: 2px inset green;
+  background-color: $ColorAsh;
+  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
+  transition: 0.5s all ease;
+  @media only screen and (min-width: 1200px) {
+    // padding: $mn/2 $mn/3;
+  }
+  .button {
+    margin-left: auto;
+    background: none;
+    color: grey;
+    font-size: 1rem;
+    position: relative;
+    z-index: 100;
+    border: 1px solid grey;
+  }
+  h1,
+  p {
+  }
 
-     h1 {
-          // @include FontExtraLarge;
-          margin-bottom: 1rem;
-          font-family: 'helvetica neue';
-          font-weight: normal;
-          font-style: normal;
-          color: #58595b;
-          line-height: 1.4;
-          font-size: 36px;
-          max-width: 80%;
-     }
-     p {
-          @include FontNormal;
-          width: 90%;
-          text-align: left;
-          color: $ColorRock;
-          line-height: 1.3;
-          color: #58595b;
-          @media only screen and (min-width: 1200px) {
-               width: 70%;
-          }
-          a {
-               text-decoration: none;
-               color: #009ede;
-          }
-     }
-     ul {
-          @include FontNormal;
-          width: 90%;
-          text-align: left;
-          color: $ColorRock;
-          line-height: 1.3;
-          color: #58595b;
-     }
+  h1 {
+    // @include FontExtraLarge;
+    margin-bottom: 1rem;
+    font-family: "Franklin Gothic Medium";
+    font-weight: normal;
+    font-style: normal;
+    color: #58595b;
+    line-height: 1.4;
+    font-size: 36px;
+    max-width: 80%;
+  }
+  p {
+    @include FontNormal;
+    width: 90%;
+    text-align: left;
+    color: $ColorRock;
+    line-height: 1.3;
+    color: #58595b;
+    @media only screen and (min-width: 1200px) {
+      width: 70%;
+    }
+    a {
+      text-decoration: none;
+      color: #009ede;
+    }
+  }
+  ul {
+    @include FontNormal;
+    width: 90%;
+    text-align: left;
+    color: $ColorRock;
+    line-height: 1.3;
+    color: #58595b;
+  }
 }
 
 .showButton {
-     display: none;
-     margin-left: auto;
-     background: none;
-     margin-right: $mn/4.5;
-     margin-top: $mn/1.25;
-     color: grey;
-     font-size: 1rem;
-     position: relative;
-     z-index: 100;
-     border: 1px solid grey;
+  display: none;
+  margin-left: auto;
+  background: none;
+  margin-right: $mn/4.5;
+  margin-top: $mn/1.25;
+  color: grey;
+  font-size: 1rem;
+  position: relative;
+  z-index: 100;
+  border: 1px solid grey;
 }
