feat: toggles for intro & data boxes, data boxes working

--- a/components/Style/initiativeCard.module.scss
+++ b/components/Style/initiativeCard.module.scss
@@ -8,6 +8,9 @@
      height: $mn * 5.5;
      margin: $mn/4;
      cursor: pointer;
+     @media screen and (max-width: 400px) {
+          min-width: 250px;
+     }
      .front,
      .back {
           background-color: $ColorAsh;
