--- a/components/Style/header.module.scss
+++ b/components/Style/header.module.scss
@@ -5,14 +5,15 @@
      display: flex;
      width: 100%;
      padding: $mn/4 $mn/6;
-     height: $mn * 1.2;
+     min-height: $mn * 1.2;
      align-items: center;
+     flex-wrap: wrap;
      .LogInButton {
           margin-left: auto;
      }
      h1,
      button {
-          @include FontLarge;
+          @include FontNormal;
           margin: 0px $mn/3;
      }
      button {
@@ -25,7 +26,7 @@
      }
 
      img {
-          height: 100%;
+          height: calc(30px + 2vw);
           margin-left: $mn/3;
      }
 }
