--- a/base/normalize.scss
+++ b/base/normalize.scss
@@ -1,11 +1,11 @@
 body {
-     margin: 0;
-     padding: 0;
-     width: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 * {
-     box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 h1,
@@ -16,5 +16,12 @@ h5,
 h6,
 p,
 a {
-     margin: 0;
+  margin: 0;
+}
+
+select,
+option,
+input,
+button {
+  outline: none;
 }
