--- a/components/Style/toggle.module.scss
+++ b/components/Style/toggle.module.scss
@@ -10,6 +10,7 @@
           display: inline-block;
           width: 30 * 1.5px;
           height: 17 * 1.5px;
+          display: flex;
           input {
                opacity: 0;
                width: 0;
@@ -23,7 +24,7 @@
                right: 0;
                bottom: 0;
                border-radius: 17px;
-               background-color: #2196f3;
+               background-color: #ccc;
 
                -webkit-transition: 0.4s;
                transition: 0.4s;
@@ -32,7 +33,7 @@
                     content: '';
                     height: 13 * 1.5px;
                     width: 13 * 1.5px;
-                    right: 2 * 1.5px;
+                    left: 2 * 1.5px;
                     bottom: 2 * 1.5px;
                     background-color: white;
                     -webkit-transition: 0.4s;
@@ -41,15 +42,13 @@
                }
           }
           input:checked + .slider {
-               background-color: #ccc;
+               background-color: #2196f3;
           }
           input:focus + .slider {
                box-shadow: 0 0 1px #2196f3;
           }
           input:checked + .slider:before {
-               -webkit-transform: translateX(26px);
-               -ms-transform: translateX(26px);
-               transform: translateX(-19px);
+               transform: translateX(19px);
           }
      }
      h5 {
