--- a/components/Style/heroCard.module.scss
+++ b/components/Style/heroCard.module.scss
@@ -4,15 +4,18 @@
      background-color: $ColorGreen;
      color: $ColorWhite;
      flex-grow: 1;
+     display: flex;
      width: 30%;
      padding: $mn/3;
      margin: $mn/6.5;
-
+     box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.18);
      h1 {
           @include FontHeadline;
+          margin-left: auto;
      }
 
      h6 {
-          @include FontLarge;
+          @include FontNormal;
+          margin: auto 0;
      }
 }
